@@ -2,6 +2,6 @@ AUX 6.5/nbbuild_build.xml.patch 878 RMD160 d1c94abc36c08efc829bfc2c970667d3339a7
 AUX 6.5/nbbuild_cluster.properties.patch 382 RMD160 e35097a0fb2704157eda45d933ffadc6f2c32917 SHA1 0383389d6c782b5d48a6718da4f3c416790d9723 SHA256 5bae1a52fe7b6e27acaa57f17e5daf0c201db9bc26d96ebe11a700c6ea93bd4c
 AUX 6.5/nbbuild_templates_projectized.xml.patch 867 RMD160 f368e1f80e1e332e2886c95d023a9b25f456b4e8 SHA1 4cb2e905a07125afa714bfecdcbee0902e81f67b SHA256 388ac6d71ce9d85efc7ec55585ae12ff8607a7b9e6239455a1545033463bf811
 DIST netbeans-6.5rc1-200810171318-src.zip 278989368 RMD160 0ab73329699ef960a725fb1152404890159bde59 SHA1 7ac0ca333f23dbb1d70751eb5ee13f5395902099 SHA256 b11ffd3719f5129a3e86f0ab61fcbcdf6ff6927bd15126386441956170ec3835
-EBUILD netbeans-6.5_rc1.ebuild 34680 RMD160 10192e0a1e807e40fbe0685fc1fd3345d11a9b68 SHA1 d2dbe34da076a2c43b23ff54eddecc3f4c2ed791 SHA256 4a477d6de3a340bfa5e190408d738ad8ec13bc5fc36d5c44cf65b72c484564f7
-MISC ChangeLog 26708 RMD160 9afde511e8c725897e4c20bbfc04114dd3d775df SHA1 05b8340f390d3b0a6970d3891948155e3e2705e9 SHA256 d0b97ab2ce03e7f4701de3663f1b46ccfd79340ad8d93861787ff7ef6d684cc3
+EBUILD netbeans-6.5_rc1.ebuild 34692 RMD160 3fdaab1c34268d0c27f2f3cd7da414983bd5e968 SHA1 78bf968ea13bb35042a6f532346a3bca3fb7a045 SHA256 021fbf0d739300ee309ef022f4f357e539663d0efc127880342408028a36a456
+MISC ChangeLog 26832 RMD160 383e97293ea5fbb76552897e793b349d5f389d31 SHA1 e1641d999ad8da9892b173d7c3b8227cc4254ca9 SHA256 975d700dcba19b4a6f4a7eb59c41089544084645f4279621bbbcc4d0465dc8f1
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
