@@ -2,6 +2,9 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5_rc1.ebuild:
+  Fixed linking to lucene to correct slot 2.3
+
   22 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> ++,
   +files/6.5/nbbuild_build.xml.patch,
   +files/6.5/nbbuild_cluster.properties.patch,
